refactor: añadido un overflow: scroll a la tabla que muestra los resultados de las elecciones en el dashboard del administrador

--- a/avAdmin/admin-directives/dashboard/dashboard.less
+++ b/avAdmin/admin-directives/dashboard/dashboard.less
@@ -113,6 +113,11 @@
   .wrap {
     white-space: normal;
   }
+
+  .overflow-table {
+    overflow: scroll;
+    overflow-y: hidden;
+  }
 }
 
 /* send auth-codes-confirm-modal */
