Acabada mejora responsive botones vista admin/census-data

--- a/avAdmin/admin-directives/elcensus/elcensus.less
+++ b/avAdmin/admin-directives/elcensus/elcensus.less
@@ -23,7 +23,23 @@
 
   .header-block.affix-top {
     margin-top: 0;
+    padding-bottom: 10px;
   }
+
+  .header-block-responsive {
+    display: block;
+    background-color: #eee;
+    color: #555;
+    padding: 10px;
+    padding-bottom: 30%;
+    margin: 25px 0;
+  }
+
+  .header-block-responsive.affix-top {
+    margin-top: 0;
+    padding-bottom: 10px;
+  }
+
 
   .form-group .radio {
     border: 2px solid transparent;
